--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "mongo-data-modeling-exercise",
-  "version": "1.0.0",
-  "description": "[![General Assembly Logo](https://camo.githubusercontent.com/1a91b05b8f4d44b5bbfb83abac2b0996d8e26c92/687474703a2f2f692e696d6775722e636f6d2f6b6538555354712e706e67)](https://generalassemb.ly/education/web-development-immersive)",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@git.generalassemb.ly:Sampreet-Chawla/mongo-data-modeling-exercise.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.10.9"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.5"
-  }
+	"name": "mongo-data-modeling-exercise",
+	"version": "1.0.0",
+	"description": "[![General Assembly Logo](https://camo.githubusercontent.com/1a91b05b8f4d44b5bbfb83abac2b0996d8e26c92/687474703a2f2f692e696d6775722e636f6d2f6b6538555354712e706e67)](https://generalassemb.ly/education/web-development-immersive)",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js",
+		"dev": "nodemon server.js",
+		"db:seed-beverages": "node ./db/beverages-seed.js",
+		"db:seed-penpals": "node ./db/penpals-seed.js",
+		"db:seed-bestever": "node ./db/best-everything-seed.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git@git.generalassemb.ly:Sampreet-Chawla/mongo-data-modeling-exercise.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.10.9"
+	},
+	"devDependencies": {
+		"morgan": "^1.10.0",
+		"nodemon": "^2.0.5"
+	}
 }
